--- a/Kate-Spade/320x50.html
+++ b/Kate-Spade/320x50.html
@@ -59,7 +59,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/ObSp1lm.gif");
+            background: url("https://i.imgur.com/m8eJTNE.gif");
             background-size: cover;
         }
 
