--- a/Kate-Spade/728x90.html
+++ b/Kate-Spade/728x90.html
@@ -96,7 +96,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/5Lgg6Oe.gif");
+            background: url("https://i.imgur.com/mFPKIeR.gif");
             background-size: cover;
         }
 
