--- a/Kate-Spade/Venetian.html
+++ b/Kate-Spade/Venetian.html
@@ -2277,7 +2277,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/ld4yivz.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/hqn3Tkb.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/bIJ1lO6.jpg"></dataimg>
 <!--#/#--><!--#i2.i107.slice-image.html:slice-image/html.1-->
 <dataimg id="i107" src="https://i.imgur.com/Jrtilis.jpg"></dataimg>
 <!--#/#-->
