--- a/Kate-Spade/fade-small.html
+++ b/Kate-Spade/fade-small.html
@@ -79,7 +79,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/tSNq1lx.jpg)
+            background-image: url(https://i.imgur.com/oArpiKX.jpg)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
