--- a/Fester/Venetian300x600.html
+++ b/Fester/Venetian300x600.html
@@ -2186,10 +2186,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.2*/
 #i30 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+}
+/*#/#*//*#i16.image.css:image/base/css*/
+#i16 { opacity: 1; }
+/*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 81px; height: 50px;
+        -ms-transform: translate(0, 0) translate(214px, 553px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(214px, 553px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(214px, 553px) rotate(0deg);
+        transform: translate(0, 0) translate(214px, 553px) rotate(0deg);
+}
+/*#/#*//*#i7.text.css:text/base/css*/
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 31px;
+        -ms-transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 475px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2203,49 +2221,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 450px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 450px;
+        -ms-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
 }
-/*#/#*//*#i39.text.css:text/base/css*/
-#i39 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 105%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i39.i40.positioning.css:positioning/base/css.2*/
-#i39 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 57px;
-        -ms-transform: translate(0, 0) translate(12px, 510px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 510px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 510px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 510px) rotate(0deg);
-}
-/*#/#*//*#i46.text.css:text/base/css*/
-#i46 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 23px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 35px;
-        -ms-transform: translate(0, 0) translate(12px, 478px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 478px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 478px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 478px) rotate(0deg);
-}
-/*#/#*//*#i41.image.css:image/base/css*/
-#i41 { opacity: 1; }
-/*#/#*//*#i41.i42.positioning.css:positioning/base/css.2*/
-#i41 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 46px;
-        -ms-transform: translate(0, 0) translate(219px, 554px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(219px, 554px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(219px, 554px) rotate(0deg);
-        transform: translate(0, 0) translate(219px, 554px) rotate(0deg);
-}
-/*#/#*//*#i43.button.css:button/base/css*/
-#i43 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(230,0,0,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(230,0,0,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i43:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i43:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i43.i44.positioning.css:positioning/base/css.2*/
-#i43 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 30px;
-        -ms-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
-        transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
+/*#/#*//*#i49.button.css:button/base/css*/
+#i49 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(209,0,25,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(224,40,0,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i49:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i49:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i49.i50.positioning.css:positioning/base/css.2*/
+#i49 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 106px; height: 30px;
+        -ms-transform: translate(0, 0) translate(97px, 436px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(97px, 436px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(97px, 436px) rotate(0deg);
+        transform: translate(0, 0) translate(97px, 436px) rotate(0deg);
 }
 /*#/#*//*#i26.button.css:button/base/css*/
 #i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(145,145,145,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2253,10 +2244,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
 #i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 298px; height: 598px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+}
+/*#/#*//*#i51.text.css:text/base/css*/
+#i51 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i51.i52.positioning.css:positioning/base/css.2*/
+#i51 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 271px; height: 56px;
+        -ms-transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
+        transform: translate(0, 0) translate(15px, 508px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2264,6 +2264,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
+<!--#/#--><!--#i16.image.html:image/html-->
+<img id="i16" src="https://i.imgur.com/nEm0gJ9.png"/>
+<!--#/#--><!--#i7.text.html:text/html-->
+<div id="i7">¿Regresaron las lluvias?</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2274,20 +2278,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i6" src="https://i.imgur.com/1aRdjCz.png"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i39.text.html:text/html-->
-
-<!--#/#--><!--#i46.text.html:text/html-->
-<div id="i46">¿Regresaron las lluvias?</div>
-<!--#/#--><!--#i41.image.html:image/html-->
-<img id="i41" src="https://i.imgur.com/nEm0gJ9.png"/>
-<!--#/#--><!--#i43.button.html:button/html-->
-<button id="i43">¡Compra ahora!</button>
+<!--#/#--><!--#i49.button.html:button/html-->
+<button id="i49">¿Saber más?</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
+<!--#/#--><!--#i51.text.html:text/html-->
+<div id="i51">Olvídalas con los productos de la marca Fester y aprovecha los descuentos y promociones que tenemos para ti.</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i16.image.js:image/base/js*/
+
+/*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
+bmShow('i16');
+/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
+bmShow('i7');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2303,7 +2309,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: 'rgba(214,35,35,1)',
+        shadow: '#006496',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2332,14 +2338,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i39.i40.positioning.js:positioning/base/js.2*/
-bmShow('i39');
-/*#/#*//*#i41.image.js:image/base/js*/
-
-/*#/#*//*#i41.i42.positioning.js:positioning/base/js.2*/
-bmShow('i41');
-/*#/#*//*#i43.i44.positioning.js:positioning/base/js.2*/
-bmShow('i43');
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
@@ -2355,8 +2353,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
-bmShow('i46');
+/*#/#*//*#i49.i50.positioning.js:positioning/base/js.2*/
+bmShow('i49');
+/*#/#*//*#i51.i52.positioning.js:positioning/base/js.2*/
+bmShow('i51');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2374,6 +2374,15 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i16.image.meta:image/meta*/
+name: nEm0gJ9.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i7.text.meta:text/meta*/
+name: ¿Regresaron las lluvias?; customName: false;
+/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2385,27 +2394,18 @@ name: OL8lWfw.png; fileId: ; sourceTypeId: externalUrl;
 name: 1aRdjCz.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i39.text.meta:text/meta*/
-name: Olvídalas con los productos de la marca Fester y aprovecha los descuentos y promociones que tenemos para ti.; customName: false;
-/*#/#*//*#i39.i40.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i46.text.meta:text/meta*/
-name: ¿Regresaron las lluvias?; customName: false;
-/*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i41.image.meta:image/meta*/
-name: nEm0gJ9.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i49.button.meta:button/meta*/
+name: ¿Saber más?;
 customName: false;
-/*#/#*//*#i41.i42.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i43.button.meta:button/meta*/
-name: ¡Aprovéchalo!;
-customName: false;
-/*#/#*//*#i43.i44.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i49.i50.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
 name: ;
 customName: false;
 /*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i51.text.meta:text/meta*/
+name: Olvídalas con los productos de la marca Fester y aprovecha los descuentos y promociones que tenemos para ti.; customName: false;
+/*#/#*//*#i51.i52.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
