--- a/Fester/Fade300x250.html
+++ b/Fester/Fade300x250.html
@@ -91,7 +91,7 @@
             z-index: 5;
             margin-left: 40%;
             left: -30px;
-            background-color: #ff0020;
+            background-color: #d10019;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
