--- a/XCARET DESCUENTOS US/Fade_300x250.html
+++ b/XCARET DESCUENTOS US/Fade_300x250.html
@@ -51,7 +51,7 @@
 
          .cta {
             position: absolute;
-            bottom: 80px;
+            bottom: 75px;
             width: 70px;
             line-height: 1.3em;
             z-index: 5;
@@ -75,15 +75,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/JjO9YqA.jpg)
+            background-image: url(https://i.imgur.com/NHXPu7r.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/qY31ZhY.jpg)
+            background-image: url(https://i.imgur.com/QPNLnGJ.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/rqqWv7P.jpg)
+            background-image: url(https://i.imgur.com/fyuPnF5.jpg)
 
         }
 
@@ -117,8 +117,9 @@
             line-height: 1.0;
             color: #000;
             text-align: center;
-            margin-top: 20px;
-            width: 99%;
+            margin-top: 25px;
+            width: 90%;
+            margin-left: 10px;
           
             
         }
@@ -295,7 +296,7 @@
                </div>
 
             <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/MSQr2vw.png"></div>
+            <!--<div class="logo"> <img id="logo" src="https://i.imgur.com/MSQr2vw.png"></div>-->
 
 
                 <!--PARA QUITAR LOS BOTONES SOLO COMENTAR Y CERRAR-->
