--- a/XCARET DESCUENTOS US/Venetian_300x600.html
+++ b/XCARET DESCUENTOS US/Venetian_300x600.html
@@ -2190,22 +2190,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 234px; height: 53px;
-        -ms-transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
-        transform: translate(0, 0) translate(36px, 494px) rotate(0deg);
-}
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
-/*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 39px;
-        -ms-transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
-        transform: translate(0, 0) translate(237px, 554px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 264px; height: 75px;
+        -ms-transform: translate(0, 0) translate(20px, 504px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 504px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 504px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 504px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2225,14 +2216,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i50.image.css:image/base/css*/
+#i50 { opacity: 1; }
+/*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 70px; height: 49px;
+        -ms-transform: translate(0, 0) translate(222px, 377px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(222px, 377px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(222px, 377px) rotate(0deg);
+        transform: translate(0, 0) translate(222px, 377px) rotate(0deg);
+}
 /*#/#*//*#i45.image.css:image/base/css*/
 #i45 { opacity: 1; }
 /*#/#*//*#i45.i46.positioning.css:positioning/base/css.2*/
 #i45 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 142px; height: 47px;
-        -ms-transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 430px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(79px, 432px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(79px, 432px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(79px, 432px) rotate(0deg);
+        transform: translate(0, 0) translate(79px, 432px) rotate(0deg);
 }
 /*#/#*//*#i26.button.css:button/base/css*/
 #i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(115,112,112,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2240,10 +2240,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
 #i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 600px;
-        -ms-transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i37.font-local.css:font/font-local/css*/
 /*#i37.i38.font-local.css:font-local/css.1*/
@@ -2265,8 +2265,6 @@ url('fonts/') format('svg');
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Get exclusive discounts until May 12th.</div>
-<!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/MSQr2vw.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2277,6 +2275,8 @@ url('fonts/') format('svg');
 <dataimg id="i47" src="https://i.imgur.com/skyYf9o.jpg"></dataimg>
 <!--#/#-->
 </div>
+<!--#/#--><!--#i50.image.html:image/html-->
+<img id="i50" src="https://i.imgur.com/MSQr2vw.png"/>
 <!--#/#--><!--#i45.image.html:image/html-->
 <img id="i45" src="https://i.imgur.com/hMAyZ0j.png"/>
 <!--#/#--><!--#i26.button.html:button/html-->
@@ -2288,10 +2288,6 @@ url('fonts/') format('svg');
 bmShow('i30');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
-/*#/#*//*#i16.image.js:image/base/js*/
-
-/*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
-bmShow('i16');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2349,6 +2345,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i50.image.js:image/base/js*/
+
+/*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
+bmShow('i50');
 /*#/#*//*#i45.image.js:image/base/js*/
 
 /*#/#*//*#i45.i46.positioning.js:positioning/base/js.2*/
@@ -2389,11 +2389,6 @@ data: /*!*/{}/*!*/;
 name: Get exclusive discounts until May 12th.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i16.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2406,6 +2401,11 @@ name: skyYf9o.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i50.image.meta:image/meta*/
+name: LOGO copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i45.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
