--- a/Xcaret Descuentos/Fade300x250.html
+++ b/Xcaret Descuentos/Fade300x250.html
@@ -110,15 +110,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/OelLuPw.png)
+            background-image: url(https://i.imgur.com/namxlHN.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/tzgP92U.png)
+            background-image: url(https://i.imgur.com/giROYBD.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/YVMEkz5.png)
+            background-image: url(https://i.imgur.com/cnN4Yzs.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
@@ -311,10 +311,10 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;">¡Consigue descuentos exclusivos sólo hasta el 12 de Mayo!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:22px;">¡Consigue descuentos exclusivos sólo hasta el <br>12 de Mayo!</span></div>
             <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:16px; font-style: italic; margin-top: -10px;"></span></div>
             <div style="bottom:0px;height: 26px;text-align:right;margin-top:-1px;"> 
-              <img src="https://i.imgur.com/4ZhA6TO.png" style="height:40px;margin-right:5px;">
+              <img src="" style="height:40px;margin-right:5px;">
             </div>
         </a>
     </div>
