--- a/Xcaret Descuentos/Venetian300x600.html
+++ b/Xcaret Descuentos/Venetian300x600.html
@@ -2209,39 +2209,21 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i37.text.css:text/base/css*/
-#i37 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i37.i38.positioning.css:positioning/base/css.2*/
-#i37 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 173px;
-        -ms-transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 473px) rotate(0deg);
-}
 /*#/#*//*#i39.text.css:text/base/css*/
-#i39 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 105%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i39 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 26px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 105%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i39.i40.positioning.css:positioning/base/css.2*/
-#i39 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 53px;
-        -ms-transform: translate(0, 0) translate(12px, 517px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 517px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 517px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 517px) rotate(0deg);
-}
-/*#/#*//*#i41.image.css:image/base/css*/
-#i41 { opacity: 1; }
-/*#/#*//*#i41.i42.positioning.css:positioning/base/css.2*/
-#i41 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 60px; height: 41px;
-        -ms-transform: translate(0, 0) translate(235px, 554px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(235px, 554px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(235px, 554px) rotate(0deg);
-        transform: translate(0, 0) translate(235px, 554px) rotate(0deg);
+#i39 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 278px; height: 88px;
+        -ms-transform: translate(0, 0) translate(12px, 484px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(12px, 484px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(12px, 484px) rotate(0deg);
+        transform: translate(0, 0) translate(12px, 484px) rotate(0deg);
 }
 /*#/#*//*#i43.button.css:button/base/css*/
-#i43 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(230,0,0,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(230,0,0,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i43 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(230,0,0,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(230,0,0,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i43:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i43:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i43.i44.positioning.css:positioning/base/css.2*/
-#i43 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 30px;
+#i43 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 127px; height: 30px;
         -ms-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(87px, 434px) rotate(0deg);
@@ -2267,21 +2249,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/BULv4fs.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/E7RCY8M.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/cQcdijU.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/14LUBNm.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/U5G3GpJ.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/JnC9SW6.png"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i37.text.html:text/html-->
-<div id="i37">¡Consigue descuentos exclusivos sólo hasta el 12 de Mayo!</div>
 <!--#/#--><!--#i39.text.html:text/html-->
-
-<!--#/#--><!--#i41.image.html:image/html-->
-<img id="i41" src="https://i.imgur.com/4ZhA6TO.png"/>
+<div id="i39">¡Consigue descuentos exclusivos sólo hasta el 12 de Mayo!</div>
 <!--#/#--><!--#i43.button.html:button/html-->
-<button id="i43">¡Compra ahora!</button>
+<button id="i43">¡Aprovéchalo!</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
@@ -2332,14 +2310,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i37.i38.positioning.js:positioning/base/js.2*/
-bmShow('i37');
 /*#/#*//*#i39.i40.positioning.js:positioning/base/js.2*/
 bmShow('i39');
-/*#/#*//*#i41.image.js:image/base/js*/
-
-/*#/#*//*#i41.i42.positioning.js:positioning/base/js.2*/
-bmShow('i41');
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
@@ -2378,26 +2350,17 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: BULv4fs.png; fileId: ; sourceTypeId: externalUrl;
+name: E7RCY8M.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: cQcdijU.png; fileId: ; sourceTypeId: externalUrl;
+name: 14LUBNm.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: U5G3GpJ.png; fileId: ; sourceTypeId: externalUrl;
+name: JnC9SW6.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i37.text.meta:text/meta*/
-name: ¡Desde el 9 al 12 de Mayo, llévate descuentos exclusivos!; customName: false;
-/*#/#*//*#i37.i38.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i39.text.meta:text/meta*/
-name: Se el primero en recibir las promociones especiales de verano 2019.; customName: false;
+name: ¡Consigue descuentos exclusivos sólo hasta el 12 de Mayo!; customName: false;
 /*#/#*//*#i39.i40.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i41.image.meta:image/meta*/
-name: 4ZhA6TO.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i41.i42.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i43.button.meta:button/meta*/
 name: ¡Aprovéchalo!;
 customName: false;
