--- a/Xcaret Descuentos/Fade300x250.html
+++ b/Xcaret Descuentos/Fade300x250.html
@@ -110,15 +110,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/namxlHN.png)
+            background-image: url(https://i.imgur.com/HXwXZLs.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/giROYBD.png)
+            background-image: url(https://i.imgur.com/ZThrlsg.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/cnN4Yzs.png)
+            background-image: url(https://i.imgur.com/lSH81MM.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
